Added data files, added content for tabs 1 and 2

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-<app-header></app-header>
+<!-- James Bhagoutie, 991554085-->
+<app-header [bio] = 'MYBIO'></app-header>
+<app-bhagoutie [bio] = 'MYBIO'></app-bhagoutie>
 <app-footer></app-footer>
