--- a/src/app/modules/headerfooter/header/header.component.html
+++ b/src/app/modules/headerfooter/header/header.component.html
@@ -1,4 +1,5 @@
-<h2>Assignment 4/ James Bhagoutie</h2>
+<!-- James Bhagoutie, 991554085-->
+<h2>Assignment 4/ {{bio.sname}}</h2>
 <br>
-<h2>Student ID: 991554085</h2>
-<h2>Status: Sophomore</h2>
+<h2>Student ID: {{bio.sid}}</h2>
+<h2>Status: {{bio.status}}</h2>
