Added functionality to third tab

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <!-- James Bhagoutie, 991554085-->
 <app-header [bio] = 'MYBIO'></app-header>
-<app-bhagoutie [bio] = 'MYBIO'></app-bhagoutie>
+<app-bhagoutie [bio] = 'MYBIO' [new] = 'newCars' [used] = 'usedCars'></app-bhagoutie>
 <app-footer></app-footer>
