final commit James Bhagoutie

--- a/src/app/bhagoutie/bhagoutie.component.css
+++ b/src/app/bhagoutie/bhagoutie.component.css
@@ -1,4 +1,4 @@
-/* James Bhagoutie 991554085 @import '@angular/material/prebuilt-themes/deeppurple-amber.css';*/
+/* James Bhagoutie 991554085 */
 @import '@angular/material/prebuilt-themes/purple-green.css';
 
 p {
